# chocolate

./: Cargo.toml
crates/chocolate/: Cargo.toml
crates/chocolate/src/: component.rs  lib.rs  scope.rs  signal.rs
examples/hello_world/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/hello_world/src/: lib.rs
